bk_ida/gccida/g2/c_expand_start_cond
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_cond/src/c-common.c:755:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0 = ( if_elt *)xrealloc( if_stack_0, 32LL * ( v3 + 10)); 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_cond/src/c-common.c:755:35: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0 = ( if_elt *)xrealloc( if_stack_0, 32LL * ( v3 + 10)); 
                                  ^~~~~~~~~~
                                  if_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_cond/src/c-common.c:761:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0 = ( if_elt *)xmalloc( 0x140uLL); 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_cond/src/c-common.c:766:7: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
v6 = &if_stack_0[if_stack_pointer]; 
      ^~~~~~~~~~
      if_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_cond/src/obj/c-common.o] Error 1
